# iitp-interpolations

./: .gitignore  README.md  conf.py  demo.py  iitp-interpolate.py  iitp-interpolations.py  index.rst  interpolate.py  main.ipynb  main.py  methods.py  noxfile.py  pyproject.toml  sort.py
docs/: index.rst
docs/source/: bilinear_interpolation.md  conf.py  index.rst  lanczos_interpolation.md  spline_interpolation.md  usage.md  usage.rst
docs/source/apidocs/: index.rst
docs/source/apidocs/methods/: methods.bilinear.rst  methods.lanczos.rst  methods.rst  methods.spline.rst
methods/: __init__.py  bilinear.py  lanczos.py  methods.py  spline.py  test_bilinear.py
src/: methods.py  test_methods.py
tests/: test_bilinear.py  test_lanczos.py  test_spline.py
