[project]
name = "iitp-python"
version = "0.1.0"
description = "Code for IITP Python course"
authors = [
    {name = "Timchenko Daniil",email = "danitim4@gmail.com"}
]
license = {text = "Unlicense"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "pyqt5 (>=5.15.11,<6.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
