[project]
name = "iitp-interpolations"
version = "0.1.0"
description = "Code for IITP Python course"
authors = [
    {name = "Timchenko Daniil",email = "danitim4@gmail.com"}
]
license = {text = "Unlicense"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.2.3,<3.0.0)",
    "click (>=8.1.8,<9.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "pyqt5 (>=5.15.11,<6.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "types-tqdm (>=4.67.0.20250417,<5.0.0.0)",
]

[tool.poetry]
package-mode = true
packages = [
    { include = "methods" },
    { include = "tests" }
]

[tool.poetry.scripts]
interpolate = 'iitp-interpolations:main'

[tool.pytest.ini_options]
addopts = "--cov --cov-report=term-missing"

[tool.ruff]
line-length = 120
exclude = ["docs", "tests"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["PT011", "S101", "T201",
    "PLR2004", "PLR0913",
    "N806",
    "D211", "D212",
    "COM812", "D203"]

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.7"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
sphinx = "^8.2.3"
furo = "^2024.8.6"
nox = "^2025.5.1"
mypy = "^1.15.0"
nox-poetry = "^1.2.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"